deploy/services/base/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deploy
  annotations:
    kubernetes.io/change-cause: 'Adjust resource management'
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  revisionHistoryLimit: 5
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: api
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: docker-pull
      containers:
        - name: api
          image: jensdll/image-data-hiding:api.latest
          imagePullPolicy: Always
          securityContext:
            runAsUser: 100
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: appsettings
              mountPath: /app/appsettings.json
              subPath: appsettings.json
              readOnly: true
          resources:
            requests:
              cpu: '500m'
              memory: '1000Mi'
            limits:
              cpu: '750m'
              memory: '1200Mi'
          ports:
            - containerPort: 8080
      volumes:
        - name: appsettings
          configMap:
            name: api-config
            items:
              - key: appsettings.json
                path: appsettings.json
